<resources>
    <string name="app_name">SupportQ</string>
    <string name="Password">Password</string>
    <string name="Username">Username</string>
    <string name="facebook_app_id">875574549619706</string>
    <string name="fb_login_protocol_scheme">fb875574549619706</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register">Student</string>
    <string name="action_sign_in">Continue with Facebook</string>
    <string name="action_sign_up">Don\'t have a Facebook account? Sign up</string>
    <string name="prompt_password">"Password: "</string>
    <string name="prompt_email">"Username: "</string>
    <string name="post_question">Submit</string>
    <string name="question_hint">What\'s your question?</string>
    <string name="password_hint">Password:</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_in">Sign in</string>
    <string name="welcome_message">Hello there, Welcome Back</string>
    <string name="set_up_username">Set up your username</string>
    <string name="edit_profile_details">Edit profile</string>
    <string name="logout">Sign out</string>
    <string name="favs">Favs</string>
    <string name="description">Question details</string>
    <string name="timeStamp">Relative timestamp</string>
    <string name="fullname">Full Name</string>
    <string name="facebook_sign_in">OR</string>
    <string name="create_account_prompt">Don\'t have an account?</string>
    <string name="reply">Replies</string>
    <string name="respond">Compose your reply</string>
    <string name="approved_message">The instructor approved this answer</string>
    <string name="save">Bookmark</string>
    <string name="instructor_login">Instructor</string>
    <string name="register_prompt">Register as a/an</string>
    <string name="key">Secret Key</string>

    <!--EditProfileActivity -->
    <string name="PHOTO_FILENAME">photo.jpg</string>
    <string name="AUTHORITY">com.codepath.fileprovider.supportq</string>
    <string name="PICTURE_NOT_TAKEN">Picture not taken</string>
    <string name="FAILED_TO_CREATE_DIR">Failed to create directory</string>

    <!--InstructorSignUpActivity-->
    <string name="SECRET_KEY">Wrong secret key</string>

    <!--LoginActivity-->
    <string name="INCORRECT_USERNAME">Incorrect username</string>
    <string name="INCORRECT_PASSWORD">Incorrect password</string>
    <string name="TOAST_ERROR_MESSAGE">Something went wrong</string>
    <string name="NO_INTERNET_MESSAGE">No Internet Connection</string>

    <!--RegistrationActivity -->
    <string name="REGISTRATION_ERROR">Registration error</string>
    <string name="USERNAME_TAKEN">Username is already taken</string>
    <string name="name">Name</string>

    <!--ComposeFragment -->
    <string name="QUESTION_EMPTY_ERROR">Question cannot be empty"</string>
    <string name="QUESTION_LENGTH_ERROR">Question should be at least 5 characters long</string>
    <string name="SAVING_ERROR">Error while trying to save question</string>
    <string name="QUESTION_POSTED_TOAST">Your question has been posted successfully</string>

    <!--HomeFragment -->
    <string name="FETCHING_POST_ERROR">Issue with getting posts</string>
    <string name="HOME_FRAGMENT_KEY">HomeFragment</string>

    <!--ProgressIndicator -->
    <string name="Loading">Loading....</string>
    <string name="Wait">Please wait</string>

    <!--Question -->
    <string name="KEY_DESCRIPTION">Description</string>

    <!--Validator-->
    <string name="PASSWORD_EMPTY_ERROR">Password cannot be empty</string>
    <string name="PASSWORD_LENGTH_ERROR">Password should be more than 5 characters</string>
    <string name="USERNAME_EMPTY_ERROR">Username cannot be empty</string>
    <string name="USERNAME_LENGTH_ERROR">Username should be more than 5 characters</string>
    <string name="FULL_NAME_ERROR">Full name should be more than 5 characters</string>

    <!--ProfileFragment-->
    <string name="ParseException">Object does not exist</string>

    <!--Snackbar -->
    <string name="snackbar_text">Your question has been deleted</string>
    <string name="snackbar_action">Undo</string>
    <string name="likes">Likes</string>

    <!--plural handling for number of likes -->
    <plurals name="numberOfLikes">
        <item quantity="one">%d Like</item>
        <item quantity="other">%d Likes</item>
    </plurals>

    <!--plural handling for number of replies -->
    <plurals name="numberOfReplies">
        <item quantity="one">%d Reply</item>
        <item quantity="other">%d Replies</item>
    </plurals>

    <!--MyAlertDialogFragment-->
    <string name="internet_message">You are not connected to the internet. Make sure Wi-Fi is on, Airplane Mode is off and try again</string>
    <string name="OK">OK</string>
    <string name="title">Title</string>
    <string name="fragment_tag">Fragment_alert</string>
    <string name="edit">Edit</string>

    <!--Edit Question-->
    <string name="edit_item_key">Item</string>
    <string name="edit_item_position">Position</string>
    <string name="question_edit_message">Question cannot be empty</string>
    <string name="show_more">...Show more</string>
    <string name="show_less">...Show less</string>

    <!--Menu Main-->
    <string name="search">Search</string>
    <string name="like_sort">Sort by likes</string>
    <string name="date_sort">Sort by date</string>
    <string name="trending">Sort by trending</string>
    <string name="hide">Hide</string>
    <string name="submit">Post</string>
    <string name="home_snackbar">Your question has been posted successfully</string>
    <string name="image_name">\"random.png\"</string>
    <string name="reply_error">\"reply cannot be empty\"</string>
    <string name="all_replies">All</string>
    <string name="verified_replies">Verified</string>
    <string name="user_post">Posts</string>
    <string name="hidden">Hidden</string>
    <string name="bookmark">Bookmarked</string>
    <string name="unhide">Show</string>
    <string name="workshop">Workshop</string>
    <string name="office_hour">Office Hour</string>
    <string name="extra_info">Additional Information</string>
    <string name="sent">Submit</string>
    <string name="pick_date">Date</string>
    <string name="time">From</string>
    <string name="to">To</string>
    <string name="date_error">You need to select a date</string>
    <string name="start_error">You need to pick a start time</string>
    <string name="end_error">You need to pick an end time</string>
    <string name="success_message">Your event has been created</string>
    <string name="event_type_error">You need to select either workshop of office hour</string>
    <string name="date">Date:</string>
    <string name="start_time">Start Time:</string>
    <string name="end_time">End Time:</string>
    <string name="body">body</string>
    <string name="hosting">is hosting</string>
    <string name="all_response">All responses</string>
    <string name="verified_responses">Verified responses</string>
    <string name="sorted_date">Sorted by date</string>
    <string name="trend_sort">Sorted by Trends</string>
    <string name="sorted_like">Sorted by likes</string>
    <string name="CODE">Code</string>
    <string name="fullName">fullName</string>
    <string name="take_photo">Take a photo</string>
    <string name="gallery">Choose an image</string>
    <string name="CODE_FULLNAME">FULLNAME</string>
    <string name="application_name">SUPPORT-Q</string>
    <string name="send">Save</string>
    <string name="create_event">Additional information</string>
    <string name="choose_date">Pick a date</string>
    <string name="choose_time">Pick a time</string>
    <string name="no_trending_post">No trending posts</string>
    <string name="event">Create an event</string>
    <string name="hosting_workshop">is hosting a</string>
    <string name="hosting_office_hour">"is hosting an "</string>
    <string name="register_now">Register</string>
    <string name="instructor_prompt">Enter your secret key below if you\'re an instructor</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="hide_post"><b><i>The question has been hidden</i></b></string>
    <string name="show_post">The question has been moved to the home feed</string>
    <string name="welcome">Welcome to <b>SupportQ</b>. Get your burning questions answered.</string>
    <string name="no_bookmarked_post">No bookmarked posts</string>
    <string name="no_hidden_post">No hidden posts</string>
    <string name="no_post">No posts</string>
</resources>