<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/login_background_color"
    android:orientation="vertical"
    tools:context=".Activities.RegistrationActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@color/blue">

        <ImageView
            android:id="@+id/logo_image"
            android:layout_width="@dimen/login_image_width"
            android:layout_height="@dimen/login_image_height"
            android:layout_centerInParent="true"
            android:layout_marginBottom="50dp"
            android:background="@drawable/shape_circle_image"
            android:src="@drawable/logo" />
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/gabriela"
        android:text="@string/set_up_username"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/description_color"
        android:textSize="20dp" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etUsername"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginHorizontal="20dp"
        android:hint="@string/Username"
        app:errorEnabled="true"
        app:startIconDrawable="@drawable/ic_baseline_person_24">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/gabriela"
        android:text="@string/instructor_prompt"
        android:textAlignment="center"
        android:textColor="@color/description_color"
        android:textSize="14dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etToken"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginHorizontal="20dp"
        android:hint="@string/key"
        app:errorEnabled="true"
        app:startIconDrawable="@drawable/secret_key">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="@dimen/register_button_width"
        android:layout_height="@dimen/register_button_height"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/custom_button"
        android:layout_marginTop="16dp"
        android:text="@string/register_now"
        android:textAllCaps="false"
        android:textColor="@color/login_button_textcolor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etUsername" />


</LinearLayout>