<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/login_background_color"
    android:orientation="vertical"
    android:paddingTop="100dp"
    android:paddingHorizontal="10dp">
    <ImageView
        android:id="@+id/logo_image"
        android:layout_width="@dimen/login_image_width"
        android:layout_height="@dimen/login_image_height"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="50dp"
        android:src="@drawable/logo" />
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etUsername"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Username"
        app:startIconDrawable="@drawable/ic_baseline_person_24"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etPassword"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:startIconDrawable="@drawable/ic_baseline_vpn_key_24"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Password"
        app:errorEnabled="true"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnSignUp"
        android:layout_gravity="center_horizontal"
        android:layout_width="@dimen/sign_up_button_width"
        android:layout_height="@dimen/sign_up_button_height"
        android:background="@drawable/custom_button"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:layout_marginTop="10dp"
        android:textColor="#f9fafc" />

</LinearLayout>